[gd_scene load_steps=11 format=2]

[ext_resource path="res://resources/materials/weapon_components/bullet.material" type="Material" id=1]
[ext_resource path="res://scripts/weapon_compontents/bullet.gd" type="Script" id=2]
[ext_resource path="res://resources/sounds/destruction/bullet_impact_metal_light_07.wav" type="AudioStream" id=3]
[ext_resource path="res://resources/sounds/weapon_components/gun_rifle_sniper_shot_03.wav" type="AudioStream" id=4]
[ext_resource path="res://resources/sounds/weapon_components/gun_machinegun_auto_heavy_shot_00_last_with_tail_01.wav" type="AudioStream" id=5]
[ext_resource path="res://resources/sounds/weapon_components/gun_shotgun_sawed_off_shot_04.wav" type="AudioStream" id=6]
[ext_resource path="res://resources/sounds/destruction/bullet_impact_metal_heavy_01.wav" type="AudioStream" id=7]
[ext_resource path="res://resources/sounds/destruction/bullet_impact_metal_heavy_02.wav" type="AudioStream" id=8]

[sub_resource type="CylinderShape" id=2]
height = 1.0
radius = 0.03

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.03
bottom_radius = 0.03
height = 1.0
radial_segments = 8
rings = 1

[node name="Area" type="Area" groups=["Bullet"]]
visible = false
collision_layer = 8
collision_mask = 3
script = ExtResource( 2 )
speed = 0.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.5 )
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape"]
portal_mode = 3
cast_shadow = 0
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = ExtResource( 1 )

[node name="RayCast" type="RayCast" parent="."]
cast_to = Vector3( 0, 0, 1 )
collision_mask = 3

[node name="Lifetime" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true
autostart = true

[node name="ShotAudioLMG" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
bus = "Effects"

[node name="ShotAudioShotgun" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
bus = "Effects"

[node name="ShotAudioSniper" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_size = 1.4
bus = "Effects"

[node name="ImpactAudioLight" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
bus = "Effects"

[node name="ImpactAudioMedium" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 7 )
bus = "Effects"

[node name="ImpactAudioHeavy" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 8 )
bus = "Effects"

[connection signal="body_entered" from="." to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
[connection signal="finished" from="ShotAudioLMG" to="." method="_on_ShotAudioLMG_finished"]
[connection signal="finished" from="ShotAudioShotgun" to="." method="_on_ShotAudioShotgun_finished"]
[connection signal="finished" from="ShotAudioSniper" to="." method="_on_ShotAudioSniper_finished"]
[connection signal="finished" from="ImpactAudioLight" to="." method="_on_ImpactAudioLight_finished"]
[connection signal="finished" from="ImpactAudioMedium" to="." method="_on_ImpactAudioMedium_finished"]
[connection signal="finished" from="ImpactAudioHeavy" to="." method="_on_ImpactAudioHeavy_finished"]
